--- a/src/display.scss
+++ b/src/display.scss
@@ -2,8 +2,20 @@
   width: 100%;
 }
 
+.h100p {
+  height: 100%;
+}
+
 .d-ib {
   display: inline-block;
+}
+
+.d-if {
+  display: inline-flex;
+}
+
+.d-block {
+  display: block;
 }
 
 .d-flex {
@@ -12,6 +24,10 @@
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .justify-center {
@@ -34,16 +50,12 @@
   align-items: flex-start;
 }
 
-.align-start {
-  align-self: flex-start;
-}
-
 .flex-column {
   flex-direction: column;
 }
 
 .flex-row {
-  flex-direction: row !important;
+  flex-direction: row;
 }
 
 .flex-auto {
@@ -59,11 +71,11 @@
 }
 
 .m-auto {
-  margin: auto !important;
+  margin: auto;
 }
 
 .ml-auto {
-  margin-left: auto !important;
+  margin-left: auto;
 }
 
 .mr-auto {
@@ -75,15 +87,19 @@
 }
 
 .text-capitalize {
-  text-transform: capitalize !important;
+  text-transform: capitalize;
 }
 
 .text-uppercase {
-  text-transform: uppercase !important;
+  text-transform: uppercase;
 }
 
 .text-lowercase {
-  text-transform: lowercase !important;
+  text-transform: lowercase;
+}
+
+.fw-bold {
+  font-weight: bold;
 }
 
 .text-truncate {
@@ -96,10 +112,6 @@
   .opacity-#{$i} {
     opacity: $i / 10;
   }
-}
-
-.fw-bold {
-  font-weight: bold !important;
 }
 
 .pos-r {
