--- a/src/spacing.scss
+++ b/src/spacing.scss
@@ -14,53 +14,13 @@ $sides: (
     .p#{$letter}-#{$px * 5} {
       padding-#{$side}: #{$px * 5}px !important;
     }
+
+    .m-#{$px * 5} {
+      margin: #{$px * 5}px !important;
+    }
+
+    .p-#{$px * 5} {
+      padding: #{$px * 5}px !important;
+    }
   }
-}
-
-.mb-0 {
-  margin-bottom: 0 !important;
-}
-
-.mt-0 {
-  margin-top: 0 !important;
-}
-
-.m-n-10 {
-  margin: 0 -10px;
-}
-
-.p-30 {
-  padding: var(--spacing--30);
-}
-
-.p-20 {
-  padding: var(--spacing--20);
-}
-
-.pv-40 {
-  padding: 0 var(--spacing--40);
-}
-
-.p-30 {
-  padding: var(--spacing--30);
-}
-
-.p-40 {
-  padding: var(--spacing--40);
-}
-
-.pv-30 {
-  padding: 0 var(--spacing--30);
-}
-
-.ph-40 {
-  padding: var(--spacing--40) 0;
-}
-
-.pb-20 {
-  padding-bottom: var(--spacing--20);
-}
-
-.h-100 {
-  height: 100%;
 }
